fixed some unresolved errors on the profile page due to the stats not showing when a user has no document. Styled the bill list. Loader has been modified

--- a/app/assets/stylesheets/components/_base.scss
+++ b/app/assets/stylesheets/components/_base.scss
@@ -188,12 +188,15 @@ a:focus {
 .pulse {
   margin-bottom: 20px;
   display: block;
-  width: 22px;
-  height: 22px;
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
   background: #cca92c;
   cursor: pointer;
   box-shadow: 0 0 0 rgba(204, 169, 44, 0.4);
+  animation: pulse 2s infinite;
+}
+.text-pulse {
   animation: pulse 2s infinite;
 }
 .pulse:hover {
