--- a/app/assets/stylesheets/components/_filter.scss
+++ b/app/assets/stylesheets/components/_filter.scss
@@ -14,11 +14,12 @@
 .bills-list {
   &__item {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     width: 100%;
     align-items: center;
     position: relative;
     background: #fff;
+    padding: 5px;
   }
   &__item::after {
     content: '';
@@ -35,11 +36,21 @@
   &__item > * {
     margin-right: 15px;
     padding: 10px 0;
+    position: relative;
+  }
+  &__item > *:not(:last-child)::after {
+    content: '';
+    width: 3px;
+    height: 100%;
+    background: rgba($primary, 0.8);
+    position: absolute;
+    right: -10px;
+    bottom: 0;
   }
   &__due {
     font-family: $body-font;
     color: $primary;
-    font-size: 26px;
+    font-size: 20px;
   }
   &__link {
     position: absolute;
@@ -55,5 +66,8 @@
     display: flex;
     align-items: center;
     z-index: 200;
+    & > *:not(:last-child) {
+      margin-right: 10px;
+    }
   }
 }
